[macOS] Fix lower bound when searching for previous transitions

The lower bound shouldn't be the smallest (positive) value representable
by a double, but the *lowest* (finite) value.

Task-number: QTBUG-69862
Change-Id: Ia66610e3c0f8d9643c329714607f5af573206fd8
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>